--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: CI
-
-on: [pull_request, pull_request_target]
+on:
+  push:
+    branches:
+      - master
+      - 'v*.[0-9]'
+  pull_request:
 
 jobs:
   build:
