Add tests for the ModalHandler implementation

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "intrinsic-scale": "^3.0.4"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "setupFilesAfterEnv": [
       "<rootDir>/test/config/setupTests.js"
     ],
