--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
     - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
     - name: Install modules
       run: yarn
+    - name: Run linter
+      run: yarn lint
     - name: Run tests
       run: yarn test --coverage
     - name: Coveralls
