--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "webpack-cli": "^5.0.0"
   },
   "dependencies": {
-    "axios": "1.6.8",
-    "intrinsic-scale": "^4.0.0"
+    "axios": "1.6.8"
   },
   "jest": {
     "testEnvironment": "jsdom",
