ci(workflows): update publish.yml and scorecard.yml

--- a/.github/workflows/scorecards.yml
+++ b/.github/workflows/scorecards.yml
@@ -35,6 +35,8 @@ jobs:
             *.sigstore.dev:443
             *.bestpractices.dev:443
             *.storage.googleapis.com:443
+            api.deps.dev:433
+            api.scorecard.dev:443
 
       - name: "Checkout code"
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
